--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
 
     <!-- JPUSH-->
 
-    <string name="app_name">茶密录音机</string>
+    <string name="app_name">茶密</string>
     <string name="no_newwork">网络连接不可用，请稍后重试</string>
 
     <string name="string_loading_now">正在加载中</string>
